SONARIAC-409 Rule S6428: Enabling privileged mode on containers is security-sensitive (#393)