@@ -20,74 +20,32 @@
 package org.sonar.iac.cloudformation.parser;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.function.Function;
 import javax.annotation.Nullable;
-import org.snakeyaml.engine.v2.comments.CommentLine;
-import org.snakeyaml.engine.v2.common.ScalarStyle;
-import org.snakeyaml.engine.v2.exceptions.Mark;
-import org.snakeyaml.engine.v2.exceptions.ParserException;
 import org.snakeyaml.engine.v2.nodes.MappingNode;
 import org.snakeyaml.engine.v2.nodes.Node;
 import org.snakeyaml.engine.v2.nodes.NodeTuple;
 import org.snakeyaml.engine.v2.nodes.ScalarNode;
 import org.snakeyaml.engine.v2.nodes.SequenceNode;
 import org.snakeyaml.engine.v2.nodes.Tag;
-import org.sonar.api.batch.fs.TextRange;
-import org.sonar.iac.cloudformation.api.tree.CloudformationTree;
-import org.sonar.iac.cloudformation.api.tree.FileTree;
-import org.sonar.iac.cloudformation.api.tree.FunctionCallTree;
-import org.sonar.iac.cloudformation.api.tree.ScalarTree;
-import org.sonar.iac.cloudformation.api.tree.TupleTree;
-import org.sonar.iac.cloudformation.tree.impl.FileTreeImpl;
-import org.sonar.iac.cloudformation.tree.impl.FunctionCallTreeImpl;
-import org.sonar.iac.cloudformation.tree.impl.MappingTreeImpl;
-import org.sonar.iac.cloudformation.tree.impl.ScalarTreeImpl;
-import org.sonar.iac.cloudformation.tree.impl.SequenceTreeImpl;
-import org.sonar.iac.cloudformation.tree.impl.TupleTreeImpl;
-import org.sonar.iac.common.api.tree.Comment;
-import org.sonar.iac.common.api.tree.impl.CommentImpl;
-import org.sonar.iac.common.api.tree.impl.TextRanges;
-import org.sonar.iac.common.extension.ParseException;
+import org.sonar.iac.cloudformation.tree.FunctionCallTree;
+import org.sonar.iac.cloudformation.tree.FunctionCallTreeImpl;
+import org.sonar.iac.common.yaml.YamlConverter;
+import org.sonar.iac.common.yaml.tree.MappingTreeImpl;
+import org.sonar.iac.common.yaml.tree.ScalarTree;
+import org.sonar.iac.common.yaml.tree.ScalarTreeImpl;
+import org.sonar.iac.common.yaml.tree.SequenceTreeImpl;
+import org.sonar.iac.common.yaml.tree.TupleTree;
+import org.sonar.iac.common.yaml.tree.YamlTree;
+import org.sonar.iac.common.yaml.tree.YamlTreeMetadata;
 
-class CloudformationConverter {
-  private static final Map<Class<?>, Function<Node, CloudformationTree>> converters = new HashMap<>();
-  static {
-    converters.put(MappingNode.class, CloudformationConverter::convertMapping);
-    converters.put(ScalarNode.class, CloudformationConverter::convertScalar);
-    converters.put(SequenceNode.class, CloudformationConverter::convertSequence);
-  }
+import static org.sonar.iac.common.yaml.tree.YamlTreeMetadata.tag;
 
-  private CloudformationConverter() {}
+public class CloudformationConverter extends YamlConverter {
 
-  public static FileTree convertFile(List<Node> nodes) {
-    if (nodes.isEmpty()) {
-      throw new ParseException("Unexpected empty nodes list while converting file", null);
-    }
-
-    return new FileTreeImpl(convert(nodes.get(0)), range(nodes.get(0)));
-  }
-
-  public static CloudformationTree convert(Node node) {
-    if (node.isRecursive()) {
-      throw new ParserException("Recursive node found", node.getStartMark());
-    }
-    return converters.get(node.getClass()).apply(node);
-  }
-
-  private static TupleTree convertTuple(NodeTuple tuple) {
-    CloudformationTree key = convert(tuple.getKeyNode());
-    CloudformationTree value = convert(tuple.getValueNode());
-    return new TupleTreeImpl(key, value, TextRanges.merge(Arrays.asList(key.textRange(), value.textRange())));
-  }
-
-  private static CloudformationTree convertMapping(Node node) {
-    MappingNode mappingNode = (MappingNode) node;
+  @Override
+  protected YamlTree convertMapping(MappingNode mappingNode) {
     List<TupleTree> elements = new ArrayList<>();
 
     if (mappingNode.getValue().size() == 1 && mappingNode.getValue().get(0).getKeyNode() instanceof ScalarNode) {
@@ -99,71 +57,63 @@ class CloudformationConverter {
     }
 
     for (NodeTuple elementNode : mappingNode.getValue()) {
-      elements.add(CloudformationConverter.convertTuple(elementNode));
+      elements.add(convertTuple(elementNode));
     }
 
-    return new MappingTreeImpl(elements, tag(node), range(node), comments(node));
+    return new MappingTreeImpl(elements, YamlTreeMetadata.fromNode(mappingNode));
   }
 
   @Nullable
-  private static FunctionCallTreeImpl convertTupleToFunctionCall(ScalarNode functionNameNode, Node argumentList) {
+  private FunctionCallTreeImpl convertTupleToFunctionCall(ScalarNode functionNameNode, Node argumentList) {
     return fullStyleFunctionName(functionNameNode.getValue()).map(functionName -> {
-      List<CloudformationTree> arguments = new ArrayList<>();
+      List<YamlTree> arguments = new ArrayList<>();
       if (argumentList instanceof SequenceNode) {
         for (Node elementNode : ((SequenceNode) argumentList).getValue()) {
-          arguments.add(CloudformationConverter.convert(elementNode));
+          arguments.add(convert(elementNode));
         }
       } else {
-        arguments.add(CloudformationConverter.convert(argumentList));
+        arguments.add(convert(argumentList));
       }
-
-      List<Comment> functionComments = comments(functionNameNode);
-      functionComments.addAll(comments(argumentList));
-
-      var functionRange = TextRanges.merge(List.of(range(functionNameNode), range(argumentList)));
-      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.FULL, arguments, functionRange, functionComments);
+      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.FULL, arguments, YamlTreeMetadata.fromNodes("FUNCTION_CALL", functionNameNode, argumentList));
     }).orElse(null);
   }
 
-  private static CloudformationTree convertScalar(Node node) {
-    ScalarNode scalarNode = (ScalarNode) node;
-
+  @Override
+  protected YamlTree convertScalar(ScalarNode scalarNode) {
     FunctionCallTree functionCallFromScalar = convertScalarToFunctionCall(scalarNode);
     if (functionCallFromScalar != null) {
       return functionCallFromScalar;
     }
-    return new ScalarTreeImpl(scalarNode.getValue(), scalarStyleConvert(scalarNode.getScalarStyle()), tag(scalarNode), range(scalarNode), comments(node));
+    return new ScalarTreeImpl(scalarNode.getValue(), scalarStyleConvert(scalarNode.getScalarStyle()), YamlTreeMetadata.fromNode(scalarNode));
   }
 
-  private static CloudformationTree convertSequence(Node node) {
-    SequenceNode sequenceNode = (SequenceNode) node;
-
-    List<CloudformationTree> elements = new ArrayList<>();
+  @Override
+  protected YamlTree convertSequence(SequenceNode sequenceNode) {
+    List<YamlTree> elements = new ArrayList<>();
 
     for (Node elementNode : sequenceNode.getValue()) {
-      elements.add(CloudformationConverter.convert(elementNode));
+      elements.add(convert(elementNode));
     }
 
     FunctionCallTree functionCallFromScalar = convertSequenceToFunctionCall(sequenceNode, elements);
     if (functionCallFromScalar != null) {
       return functionCallFromScalar;
     }
-    return new SequenceTreeImpl(elements, tag(node), range(node), comments(node));
+    return new SequenceTreeImpl(elements, YamlTreeMetadata.fromNode(sequenceNode));
   }
 
   @Nullable
-  private static FunctionCallTree convertSequenceToFunctionCall(SequenceNode functionNode, List<CloudformationTree> arguments) {
+  private static FunctionCallTree convertSequenceToFunctionCall(SequenceNode functionNode, List<YamlTree> arguments) {
     return shortStyleFunctionName(functionNode).map(functionName ->
-      new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, arguments, range(functionNode), comments(functionNode))
+      new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, arguments, YamlTreeMetadata.fromNode("FUNCTION_CALL", functionNode))
     ).orElse(null);
   }
 
   @Nullable
   private static FunctionCallTree convertScalarToFunctionCall(ScalarNode scalarNode) {
     return shortStyleFunctionName(scalarNode).map(functionName -> {
-      var functionRange = range(scalarNode);
-      var argument = new ScalarTreeImpl(scalarNode.getValue(), ScalarTree.Style.OTHER, Tag.STR.getValue(), functionRange, Collections.emptyList());
-      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, List.of(argument), functionRange, comments(scalarNode));
+      var argument = new ScalarTreeImpl(scalarNode.getValue(), ScalarTree.Style.OTHER, YamlTreeMetadata.fromNode(Tag.STR.getValue(), scalarNode));
+      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, List.of(argument), YamlTreeMetadata.fromNode("FUNCTION_CALL", scalarNode));
     }).orElse(null);
   }
 
@@ -182,68 +132,5 @@ class CloudformationConverter {
       return Optional.of(value);
     }
     return Optional.empty();
-  }
-
-  private static TextRange range(Node node) {
-    return range(node.getStartMark(), node.getEndMark());
-  }
-
-  private static TextRange range(Optional<Mark> startMark, Optional<Mark> endMark) {
-    if (!startMark.isPresent()) {
-      throw new ParseException("Nodes are expected to have a start mark during conversion", null);
-    }
-
-    if (endMark.isPresent()) {
-      return TextRanges.range(startMark.get().getLine() + 1, startMark.get().getColumn(), endMark.get().getLine() + 1, endMark.get().getColumn());
-    }
-
-    // endMark is not present. This happens for example when we have a file with only a comment.
-    // in that case, the root node will be an empty MappingNode with only a startMark to which the comment is attached
-    return TextRanges.range(startMark.get().getLine() + 1, startMark.get().getColumn(), startMark.get().getLine() + 1, startMark.get().getColumn());
-  }
-
-  private static String tag(Node node) {
-    return node.getTag().getValue();
-  }
-
-  private static List<Comment> comments(Node node) {
-    // For now we group all comments together. This might change, once we have a reason to separate them.
-    List<Comment> comments = new ArrayList<>(comments(node.getBlockComments()));
-    comments.addAll(comments(node.getInLineComments()));
-    comments.addAll(comments(node.getEndComments()));
-    return comments;
-  }
-
-  private static List<Comment> comments(@Nullable List<CommentLine> commentLines) {
-    if (commentLines == null) {
-      return Collections.emptyList();
-    }
-    List<Comment> comments = new ArrayList<>();
-    for (CommentLine comment : commentLines) {
-      comments.add(comment(comment));
-    }
-    return comments;
-  }
-
-  private static Comment comment(CommentLine comment) {
-    // We prefix the comment value with # as it is already stripped away when arrive at this point.
-    return new CommentImpl('#' + comment.getValue(), comment.getValue(), range(comment.getStartMark(), comment.getEndMark()));
-  }
-
-  private static ScalarTree.Style scalarStyleConvert(ScalarStyle style) {
-    switch (style) {
-      case DOUBLE_QUOTED:
-        return ScalarTree.Style.DOUBLE_QUOTED;
-      case SINGLE_QUOTED:
-        return ScalarTree.Style.SINGLE_QUOTED;
-      case LITERAL:
-        return ScalarTree.Style.LITERAL;
-      case FOLDED:
-        return ScalarTree.Style.FOLDED;
-      case PLAIN:
-        return ScalarTree.Style.PLAIN;
-      default:
-        return ScalarTree.Style.OTHER;
-    }
   }
 }
